# PyEBSDIndex

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  License  MANIFEST.in  PyEBSDIndex.code-workspace  PyEBSDIndex.yml  README.md  RELEASE.rst  band_detect.py  band_vote.py  crystal_sym.py  crystallometry.py  ebsd_index.py  pyproject.toml  radon_fast.py  raytest.py  rotlib.py  rotlibunittest.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  tests.yml
EBSDIndexingScaling.dgraph/: Checksums.plist  Columns.plist  Content.plist  FileInfo.plist  Spotlight.plist
EBSDIndexingScaling.dgraph/Graphs/: A96A391F-DC6E-41A0-B02F-57380CB13970.plist
ci/: install_pyopencl.sh  intel_opencl_icd.sh
doc/: NLPAR_demo.ipynb  changelog.rst  conf.py  contributing.rst  ebsd_index_demo.ipynb  index.rst  installation.rst  reference.rst
doc/_static/colormap_banners/: create_colormap_banners.py
doc/_templates/: custom-attribute-template.rst  custom-class-template.rst  custom-function-template.rst  custom-method-template.rst
doc/dev/: index.rst
doc/reference/: index.rst
doc/tutorials/: NLPAR_demo.ipynb  ebsd_index_demo.ipynb  index.rst
doc/user/: index.rst  installation.rst
pyebsdindex/: License  PyEBSDIndex.yml  README.md  __init__.py  __version.py  _ebsd_index_multi.py  _ebsd_index_parallel.py  _ebsd_index_parallel_old.py  _ebsd_index_single.py  band_detect.py  band_detect_cl.py  band_vote.py  clkernels.cl  crystal_sym.py  crystallometry.py  ebsd_index.py  ebsd_pattern (conflict_on_2022-01-11_was_deleted).py  ebsd_pattern.py  ebsdfile.py  gnomonic_correction.py  grainlabel.py  misorientation.py  nlpar (conflict_on_2022-01-11_was_deleted).py  nlpar.py  nlpar_cpu.py  openclparam.py  pairlib.py  pcopt.py  radon_fast.py  radon_fast_cl.py  rotlib.py  setup.py  spherical_radon_fast.py  tripletlib.py  tripletlib_old.py  tripletvote.py
pyebsdindex/EBSDImage/: IPFcolor.py  micronbar.py  scalarimage.py  scalebar.py
pyebsdindex/openCL/: band_detect_cl.py  radon_fast_cl.py
pyebsdindex/opencl/: band_detect_cl.py  clkernels.cl  clnlpar.cl  nlpar_cl.py  nlpar_clray.py  openclparam.py  radon_fast_cl.py  test.cl
pyebsdindex/pyebsdindex/: __init__.py  band_detect.py  clkernels.cl  crystal_sym.py  ebsd_index.py  nlpar.py  radon_fast.py  rotations.py
pyebsdindex/tests/: conftest.py  numbatest.py  raytest.py  rotlibunittest.py  test_ebsd_index.py  test_package.py  test_pcopt.py  test_tripletvote.py
pyebsdindex/tests/data/al_sim_20kv/: generate_al_sim_20kv.py
src/: NLPAR_demo.ipynb  band_detect (conflict_on_2021-09-21).py  band_detect.py  band_detect2.py  band_vote.py  band_vote2.py  band_voteEX.py  band_vote_pair.py  bandfindConvol.cl  clkernels.cl  ebsd_index.py  ebsd_index_demo.ipynb  ebsd_pattern.py  mptest.py  nlpar.py  openclparam.py  pcopt.py  radon_fast.py  raytest.py  rotlib.py  rotlibunittest.py  tripletlib.py
src/EBSDImage/: IPFcolor.py
