[metadata]
license_files = License

[manifix]
known_excludes =
    .*
    .*/**
    .git/**
    **/*.pyc
    **/*.nbi
    **/*.nbc
    doc/build*
    doc/.ipynb_checkpoints/*
    htmlcov/**

[tool:pytest]
filterwarnings =
    ignore:Deprecated call to \`pkg_resources:DeprecationWarning
    ignore:pkg_resources is deprecated as an API:DeprecationWarning

[coverage:run]
source = pyebsdindex
omit =
    setup.py
relative_files = True

[coverage:report]
precision = 2
